pagina vendedor, falta ajustar css

--- a/app/assets/css/misAnuncios.css
+++ b/app/assets/css/misAnuncios.css
@@ -21,7 +21,7 @@
     gap: 1.5em;
     width: 100%;
     max-width: 1200px;   
-     margin: 2em auto;
+    margin: 2em auto;
     padding: 0 2em;
 }
 /*Filtros: */
@@ -79,17 +79,23 @@
     padding: 0.1rem 0.5rem;
     border-radius: 8px;
 }
+.misAnunciosformularioBusqueda select{
+    appearance: none;         /* Estándar */
+    -webkit-appearance: none; /* Safari/Chrome */
+    -moz-appearance: none;    /* Firefox */
+    background: none;         /* Opcional: elimina fondo */
+    padding-right: 1.5em;
+    border: none;
+}
     .misAnunciosFiltros li:hover {
     border-bottom: solid #1156CC thin;
 }
     .misAnunciosContenido{
-        max-width: 80%;
+    max-width: 80%;
     }
     .misAnunciosContenido h3{
-        color:#1156CC;
-        margin-bottom: .3em;
-        
-        
+    color:#1156CC;
+    margin-bottom: .3em;    
     }
 /*Búsqueda:*/
     .misAnunciosformularioBusqueda {
@@ -173,7 +179,7 @@
     .misAnunciosAnuncioCard{
         display: flex;  
         overflow: hidden;   /*Recorta la imagen a los bordes */
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         border-radius: 1em;
         position: relative;
         transition: transform 0.2s ease; 
@@ -200,7 +206,7 @@
         font-size: small;
         font-style: italic;
         line-height: 1.4; /* 🔹 mejora legibilidad del texto descriptivo */
-    text-align: justify; 
+        text-align: justify; 
 
     }
     .misAnunciosPrecio{
@@ -211,10 +217,10 @@
     position: absolute;
     top: 0.6em;
     right: 0.8em;
-    color: #1156CC;
+    color: #989898;
     padding: 0.3em 0.6em;
     border-radius: 0.4em;
-    font-size:xx-small;
+    font-size:x-small;
     font-weight: 300;
     }
     .misAnunciosEdicion{
