--- a/app/assets/css/vendedor.css
+++ b/app/assets/css/vendedor.css
@@ -108,6 +108,10 @@ body{
     font-size: x-small;
    
 }
+.vendedorAnuncioDetalles a{
+    text-decoration: none;
+    color:#1156CC
+}
 .vendedorAnuncioDetalles .fecha{
     position: absolute;
   top: 0.3em;
