misAnuncios y vendedor, los links

--- a/app/assets/css/inicio.css
+++ b/app/assets/css/inicio.css
@@ -179,6 +179,10 @@
     text-decoration: none;
     font-size: 0.8em;
 }
+.nombreAnuncio h3 {
+    color: black !important;
+    font-weight: bold;
+}
 
 .infoPrecio {
     font-size: 1.5em;
