--- a/app/assets/css/misAnuncios.css
+++ b/app/assets/css/misAnuncios.css
@@ -254,6 +254,10 @@
     display: flex;
     flex-direction: column;
     }
+    a{
+        text-decoration: none;
+        color: black;
+    }
 
 /* Paginación */
     .misAnunciosPaginas {
