--- a/app/assets/css/usuarios.css
+++ b/app/assets/css/usuarios.css
@@ -108,7 +108,6 @@
 
     .usuariosTipos {
         width: 90%;
-        flex-direction: column;
         gap: 1em;
         align-items: center;
     }
@@ -116,9 +115,10 @@
     .usuariosClientes,
     .usuariosComerciantes,
     .usuariosGestores {
-        width: 100%;
-        padding: 1.5em;
-        font-size: 1em;
+        width: auto;
+        padding: 1em;
+        font-size: 0.7em;
+        text-align: center;
     }
 
     .usuariosDatos {
@@ -128,7 +128,6 @@
     .cliente,
     .comerciante,
     .gestor {
-        flex-direction: column;
         gap: 0.5em;
         padding: 0.5em;
     }
@@ -142,28 +141,20 @@
 /* Móviles pequeños */
 @media (max-width: 480px) {
     .usuariosTipos {
-        width: 95%;
-        flex-direction: column;
+        width: 100%;
         gap: 0.8em;
-    }
-
-    .usuariosClientes,
-    .usuariosComerciantes,
-    .usuariosGestores {
-        padding: 1em;
-        font-size: 0.95em;
     }
 
     .usuariosDatosClientes,
     .usuariosDatosComerciantes,
     .usuariosDatosGestores {
         gap: 0.8em;
+        width: 80%;
     }
 
     .cliente,
     .comerciante,
     .gestor {
-        flex-direction: column;
         gap: 0.3em;
         padding: 0.4em;
     }
@@ -175,5 +166,9 @@
 
     .usuariosDatos {
         width: 100%;
+    }
+
+    .usuarioInformacion p {
+        font-size: 0.8em;
     }
 }
