--- a/app/assets/css/crearGestor.css
+++ b/app/assets/css/crearGestor.css
@@ -2,6 +2,14 @@
     ------------------------------------------------- CREAR GESTOR SIEMPRE -------------------------------------------------
 ================================================================================================================== */
 
+.crearGestorMain {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .crearGestorTitulo {
     text-align: center;
     color: #2563eb;
@@ -244,11 +252,6 @@
 @media (max-width: 480px) {
     .crearGestorFormulario {
         padding: 0.8rem;
-    }
-
-    .crearGestorTitulo {
-        font-size: 1.1rem;
-        margin: 1rem 0;
     }
 
     .crearGestorBoton,
