--- a/app/assets/css/editarAnuncio.css
+++ b/app/assets/css/editarAnuncio.css
@@ -1,6 +1,14 @@
 /* ==================================================================================================================
     ------------------------------------------------- EDITAR ANUNCIO SIEMPRE -------------------------------------------------
 ================================================================================================================== */
+.editarMain {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .editarImagen {
     width: 100%;
     height: 140px;
@@ -189,6 +197,7 @@ textarea.editarInput::placeholder {
 @media (max-width: 1024px) {
     .editarFormulario {
         padding: 1.5rem;
+        width: 90%;
     }
 
     .editarTitulo {
@@ -224,6 +233,11 @@ textarea.editarInput::placeholder {
         gap: 0.8rem;
     }
 
+    .editarBotones {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
     .editarBoton,
     .editarBotonAtras {
         padding: 0.75rem 2rem;
@@ -251,6 +265,10 @@ textarea.editarInput::placeholder {
     .editarBotonAtras {
         padding: 0.6rem 1.5rem;
         font-size: 0.9rem;
+    }
+
+    .editarBotonAtras {
+        margin: 1rem 1em 0;
     }
 
     .editarImagen {
