--- a/app/assets/css/filtrado.css
+++ b/app/assets/css/filtrado.css
@@ -22,21 +22,18 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  gap: 1.5em;
-  width: 100%;
-  max-width: 1200px;   
-  margin: 2em;
-  margin-left: 8em;
-  margin-right: 8em;  
+  gap: 2.5em;
+  width: 60%;
 }
 
 /* ===================== FILTROS ===================== */
 .filtradoCategorias {
   display: flex;
   flex-direction: column;
-  width: 40%;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  padding: .5rem;
+  width: 60%;
+  padding: 0.5rem;
+  padding-right: 2.5em;
+  border-right: 2px solid #1156CC;
 }
 
 .filtroAnunciosCategoria {
