--- a/app/assets/css/inicio.css
+++ b/app/assets/css/inicio.css
@@ -179,8 +179,8 @@
     text-decoration: none;
     font-size: 0.8em;
 }
-.nombreAnuncio h3 {
-    color: black !important;
+.nombreAnuncio a {
+    color: black;
     font-weight: bold;
 }
 
